[package]
name = "lsm_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
integer-encoding = "3.0.4"
log = "0.4"
murmur3 = "0.5.2"
rand = "0.8.5"
rustyline = "10.0.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
